# storage_cluster

./: .gitignore
.github/: copilot-instructions.md
PhoneClusterApp/app/: build.gradle.kts
PhoneClusterApp/app/src/main/: AndroidManifest.xml
PhoneClusterApp/app/src/main/cpp/: CMakeLists.txt  ascon_jni.c
PhoneClusterApp/app/src/main/java/com/phonecluster/app/: AsconFileCrypto.kt  AsconNative.kt  MainActivity.kt
PhoneClusterApp/app/src/main/java/com/phonecluster/app/core/: constants.kt
PhoneClusterApp/app/src/main/java/com/phonecluster/app/network/: ApiClient.kt
PhoneClusterApp/app/src/main/java/com/phonecluster/app/screens/: FileBrowserScreen.kt  FileBrowserViewModel.kt  ModeSelectionScreen.kt  SearchScreen.kt  StorageModeScreen.kt  UserModeScreen.kt
PhoneClusterApp/app/src/main/java/com/phonecluster/app/storage/: ChunkStorage.kt  FileDao.kt  StorageNodeService.kt
PhoneClusterApp/app/src/main/java/com/phonecluster/app/utils/: FileRepository.kt
backend/: main.py
backend/app/: main.py  schema.sql
backend/app/api/routes/: devices.py  files.py
backend/app/api/ws/: devices.py
backend/app/core/: connection_manager.py  constants.py  database.py  scheduler.py
backend/app/models/: device.py
backend/app/services/: distribute_chunk.py  file_chunk_download.py  heartbeat.py  offline_detection.py  plan_replication.py  read_path.py  registration.py  repair_manager.py  replication_dispatcher.py  retrive_chunk.py
backend/models/: chunk_replication.py  file.py  user.py
(+3 files in other folders)
